# Python-Base-Practice

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  test.py  test2.py
images/: 3png
